--- a/public/App.css
+++ b/public/App.css
@@ -27,11 +27,11 @@ navbar-item {
 
 .contact-mess {
   font-size: 48px;
-  padding: 190px 200px 50px 50px;
+  padding: 190px 200px 10px 50px;
 }
 
 .contact {
-  padding-top: 16%;
+  padding-top: 10%;
   padding-bottom: 8%;
 }
 
@@ -92,4 +92,17 @@ nav {
   font-size: 28px;
   font-weight: 200;
   margin-bottom: 2%;
+}
+
+.mobile-text {
+  margin-top: 7%;
+}
+.main-mobile-text {
+  font-weight: 800;
+  font-size: 28px;
+}
+
+.sec-mobile-text {
+  font-weight: 200;
+  font-size: 18px;
 }
