--- a/public/App.css
+++ b/public/App.css
@@ -12,9 +12,13 @@ navbar-item {
   color: white !important;
 }
 .glitch {
+  margin-top: 10%;
   font-size: 8rem;
+  font-weight: 800;
 }
-
+.boutique {
+  margin-bottom: 5%;
+}
 .operating-location {
   margin: 50px 0 200px 0;
 }
@@ -32,7 +36,7 @@ navbar-item {
 
 .contact {
   padding-top: 10%;
-  padding-bottom: 8%;
+  padding-bottom: 12%;
 }
 
 .service-head {
@@ -105,4 +109,8 @@ nav {
 .sec-mobile-text {
   font-weight: 200;
   font-size: 18px;
+}
+
+.itembar {
+  font-weight: 800;
 }
