--- a/public/App.css
+++ b/public/App.css
@@ -114,3 +114,17 @@ nav {
 .itembar {
   font-weight: 800;
 }
+
+@media only screen and (max-width: 600px) {
+  .glitch {
+    font-size: 4rem;
+  }
+
+  .service-head {
+    font-size: 1.3rem;
+  }
+
+  .contact-mess {
+    font-size: 1.3rem;
+  }
+}
